tests/fixtures/invalid/ambiguous_bare_index_label.gcl
// Error: bare index labels must not lose ambiguity diagnostics.
pub index M = { A };
pub index P = { A };

node x: Dimensionless = A;
